--- a/panelcar.html
+++ b/panelcar.html
@@ -14,6 +14,12 @@ function sendData(action, value) {
     }   
     return 0;
 }
+    
+function reload() {
+    setTimeOut(() => {        
+        window.location = window.location;
+    }, 3000);
+}
 </script>
 <style>
 .slidecontainer {
@@ -107,7 +113,7 @@ function sendData(action, value) {
             <tr><td><button class="btn" onclick="sendData('action', 'honk')">Honk</button></td></tr>
             <tr><td><button class="btn" onclick="sendData('action', 'gitUpdate')">Git Pull</buttton></td></tr>
             <tr><td><button class="btn" onclick="sendData('action', 'turnOff')">Turn Off</buttton></td></tr>
-            <tr><td><button class="btn" onclick="sendData('action', 'restart')">Restart</buttton></td></tr>
+            <tr><td><button class="btn" onclick="sendData('action', 'restart'); reload();">Restart</buttton></td></tr>
         </table>
     </td>
 </tr>
